package com.amazon.ata.music.playlist.service.exceptions;

public class InvalidAttributeChangeException extends InvalidAttributeException {
    private static final long serialVersionUID = 8934814927128531934L;

}
