@startuml
'https://plantuml.com/class-diagram

interface Handler{
    +handleRequest(I input, Context context)
}

class AddSongToPlaylistActivity {
-Logger log
-PlaylistDao playlistDao
-AlbumTrackDao albumTrackDao
+handleRequest(final AddSongToPlaylistRequest addSongToPlaylistRequest, Context context) : AddSongToPlaylistResult
}


class CreatePlaylistActivity {
-Logger log
-PlaylistDao playlistDao
+handleRequest(final CreatePlaylistRequest createPlaylistRequest, Context context) : CreatePlaylistResult
}

class GetPlaylistActivity {
-Logger log
-PlaylistDao playlistDao
+handleRequest(final GetPlaylistRequest getPlaylistRequest, Context context) : GetPlaylistResult
}

class GetPlaylistSongsActivity {
-Logger log
-PlaylistDao playlistDao
+handleRequest (final GetPlaylistSongsRequest getPlaylistSongsRequest, Context context) : GetPlaylistSongsResult
}



class UpdatePlaylistActivity {
-Logger log
-PlaylistDao playlistDao
+handleRequest (final UpdatePlaylistRequest updatePlaylistRequest, Context context) : UpdatePlaylistResult
}

class AlbumTrackDao {
-dynamoDbMapper : DynamoDBMapper
}

class PlaylistDao {
-dynamoDbMapper : DynamoDBMapper
+getPlaylist(String id) : Playlist
}

class AlbumTrack {
@DynamoDBHashKey asin: String
@DynamoDBRangeKey trackNumber : Integer
albumName : String
songTitle: String
}

class Playlist {
@DynamoDBHashKey id: String
name : String
customerId: String
songCount : Integer
tags : Set<String>
songList : List<AlbumTrack>
}

class AlbumTrackNotFoundException {
-long serialVersionUID

}

class InvalidAttributeValueException implements InvalidAttributeException  {
-{static} long serialVersionUID

}

class InvalidAttributeChangeException implements InvalidAttributeException{
-{static} long serialVersionUID

}

class InvalidAttributeException implements RuntimeException  {
-{static} long serialVersionUID

}

class PlaylistNotFoundException {
-{static} long serialVersionUID
}

Playlist *-- AlbumTrack

CreatePlaylistActivity *-- PlaylistDao
CreatePlaylistActivity *-- Logger

GetPlaylistActivity *-- PlaylistDao
GetPlaylistActivity *-- Logger

GetPlaylistSongsActivity *-- PlaylistDao
GetPlaylistSongsActivity *-- Logger


UpdatePlaylistActivity *-- PlaylistDao
UpdatePlaylistActivity *-- Logger

AddSongToPlaylistActivity *-- AlbumTrackDao
AddSongToPlaylistActivity *-- PlaylistDao

RuntimeException <|-- InvalidAttributeException

InvalidAttributeException <|-- InvalidAttributeValueException
InvalidAttributeException <|-- InvalidAttributeChangeException

Handler <|.. AddSongToPlaylistActivity
Handler <|.. CreatePlaylistActivity
Handler <|.. GetPlaylistActivity
Handler <|.. GetPlaylistSongsActivity
Handler <|.. UpdatePlaylistActivity



@enduml